--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@middy/core": "^3.4.0",
+    "@middy/http-cors": "^4.5.2",
     "@middy/http-json-body-parser": "^3.4.0",
     "aws": "^0.0.3-2",
     "uuid": "^9.0.0"
